# Mandelbrot

./: .clangd  .gitignore  CMakeLists.txt  run.sh
include/glad/: glad.h
src/: buddhabrot.cpp  buddhabrot.h  main.cpp  main_cpu.cpp  main_gpu.cpp  main_gpu_bak.cpp  mandelbrot.cpp  mandelbrot.h  mcomplex.h  timer.h
src/shaders/: fragment.glsl  fragment_bak.glsl  vertex.glsl
